--- a/examples/javascript/public/index.html
+++ b/examples/javascript/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <title>react-modal-hook</title>
+    <title>react-screen-capture</title>
   </head>
 
   <body>
